2006-01-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/enc.c(enc_fini):
	  Free()d req data before overwriting data ptr with rsp data.

2006-01-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c(m_msg_send):
	  Added check for pkt_is_copy before free()ing pkt.
	* src/libcommon/m_msg.c(m_msg_send):
	  Added check for negative length returned from _msg_length().
	* src/libcommon/m_msg.c: Tweaked function documentation.

	* src/munged/dec.c(dec_unarmor):
	  Free()d data after unarmoring to prevent leak in dec_unpack_inner().
	* src/munged/dec.c(dec_unpack_outer):
	  Set realm_is_copy flag to prevent double free of realm_str.

	* src/munged/job.c(job_accept):
	  Added call to destroy msg if m_msg_bind() fails.

	* src/munged/dec.c(dec_decompress): Removed dead code in 'err' label.

	* src/munged/crypto_thread.c: Added checks to abort on error.

	* src/libmunge/decode.c(_decode_rsp):
	  Fixed bug where routine not aborted after EMUNGE_NO_MEMORY set.

	* src/libmunge/ctx.c(_munge_ctx_set_err):
	  Fixed potential NULL dereference of ctx in return value.

	* src/munge/remunge.c(parse_cmdline):
	  Fixed NUL termination of payload data.

	* src/libcommon/log.c(log_open_syslog):
	  Fixed 'identity' dereference before NULL check.

	* src/libcommon/log.c: Added void cast to ignore return code on error.

2006-01-11  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/decode.c(_decode_req):
	  Set data_is_copy flag to prevent free() of caller-supplied cred.

	* src/libcommon/m_msg.c: Revamped to support msg packing & unpacking.
	* src/libcommon/m_msg.h: Incremented MUNGE_MSG_VERSION to 4.
	  Removed struct m_msg_head & struct m_msg_v1.  Expanded struct m_msg.
	  Added m_msg_type_t, m_msg_magic_t, & m_msg_version_t.
	* src/libcommon/m_msg.h(m_msg_create): Changed prototype.
	* src/libcommon/m_msg.h(m_msg_bind): Added.
	* src/libcommon/m_msg.h(m_msg_send): Changed prototype.
	* src/libcommon/m_msg.h(m_msg_recv): Changed prototype.